respuestas de preguntas

--- a/Tema 7/Comunicar BBDD(jsjquery)/index.html
+++ b/Tema 7/Comunicar BBDD(jsjquery)/index.html
@@ -19,8 +19,11 @@
 
     <div class="respuestas">
     <p><b>¿Cómo se trata el envío de una parámetro a php?.Indica todos los pasos (html, javascript, php) </b></p>
+    <p>Ahora crearemos el script que se encargara de enviar los datos del formulario al backend a un archivo php.</p>
+    <p>Creamos el archivo php al cual le llamamos nombre.php se encargara de recoger los datos <b>let keywords = $('#busqueda').val();</b> y colocaremos un input para buscar los nombres se muestren en la vista.</p>
     
     <p><b>Atributo donde se recibe la respuesta </b></p>
+    <p>Es un array que contiene todos los nombres de lo alumnos.</p>
     
     </div>
 
