Cambios en plugin

--- a/Tema 6/PluginJQuery/index.html
+++ b/Tema 6/PluginJQuery/index.html
@@ -20,7 +20,7 @@
             <p for="nombre">Nombre</p> 
             <input type="text" name="" id="" tipo="nombre">
             <p for="apellidos">Apellidos</p>
-            <input type="text" name="" id="" tipo="apellidos">
+            <input type="text" name="" id="" tipo="nombre">
             <p for="email">Email</p>
             <input type="text" name="" id="" tipo="email">
             <p for="mensaje">Mensaje</p>
