--- a/Tema 6/PluginJQuery/index.html
+++ b/Tema 6/PluginJQuery/index.html
@@ -7,7 +7,7 @@
     <title>Plugin Formulario Jquery</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/jquery.formularioValidar.js"></script>
+    <script src="js/jquery.examen.js"></script>
     <script src="js/archivo.js"></script>
 </head>
 <body>
