--- a/Tema 6/jQueryV2Buscaminas/index.html
+++ b/Tema 6/jQueryV2Buscaminas/index.html
@@ -21,8 +21,6 @@
     <div id="elegir">
         <div class="marcador">
             <a href=""><img src="image/reload.svg" id="reiniciar" alt="reiniciar"></a> 
-            <img src="image/flag.svg" alt="flag">
-            <img src="image/winner.svg" alt="record">
         </div>
         
         <div class="seleccion">
@@ -35,7 +33,7 @@
         </div>
     </div>
         <div id="tableroJuego"></div>
-        <!--<h2></h2>-->
+        <h2 id="mensajeFinal"></h2>
     </main>
 </body>
 </html>
