--- a/Tema 7/AJAX con jQuery.Preguntas/index.html
+++ b/Tema 7/AJAX con jQuery.Preguntas/index.html
@@ -28,7 +28,7 @@
         <p><b>.ajaxStop(),</b>Registra un controlador para que se llame cuando todas las solicitudes de Ajax se hayan completado. Este es un evento de Ajax.</p>
         <p><b>.ajaxSuccess(),</b>Añade una función para que se ejecute cada vez que una solicitud Ajax se complete con éxito. Este es un evento de Ajax.</p>
         <li><h3>Indica al objeto al que han de estar asociados los métodos anteriores.</h3></li>
-        <p>Al objeto DOM que se especifique o AJAX.</p>
+        <p>Al objeto DOM que se especifique es el document.</p>
         <li><h3>Los métodos AJAX abreviados son 5. Indica cuáles son y utilidad de cada uno.</h3></li>
         <p><b>.get(),</b>Carga los dato del servidor usando una solicitud HTTP GET.</p>
         <code>
